--- a/background.html
+++ b/background.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Case Studies</title>
+    <title>Background</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
@@ -42,13 +42,13 @@
                <a class="nav-link navlist-custom" href="index.html">Home</a>
              </li>
              <li class="nav-item">
-              <a class="nav-link navlist-custom" href="background.html">Background</a>
+              <a class="nav-link navlist-custom-active" href="#">Background</a>
             </li>
              <li class="nav-item">
                <a class="nav-link navlist-custom" href="publications.html">Publications</a>
              </li>
              <li class="nav-item">
-               <a class="nav-link navlist-custom-active" href="#">Case studies</a>
+               <a class="nav-link navlist-custom" href="case-studies.html">Case studies</a>
              </li>
              <li class="nav-item">
                <a class="nav-link navlist-custom" href="team.html">The team</a>
@@ -63,7 +63,7 @@
     <header class="intro-header">
       <div class="container">
         <div class="title-custom">
-          <h1>Case studies</h1>
+          <h1>Background</h1>
           <hr class="hr-center">
         </div>
       </div>
@@ -76,41 +76,21 @@
     <div class="container">
       <div class="row publication">
         <div class="col-md-4 offset-md-2 ">
-          <img class="img-fluid" src="img/video-placeholder.png" alt="" data-toggle="modal" data-target="#videoModal">
+          <img class="img-fluid" src="img/Chariot.jpg" alt="">
         </div>
         <div class="col-md-6">
-            <h2>The future with energy-management agents </h2>
-            <p align="justify"> We are currently running a user study for agentSwitch in Nottingham. As part of this study, we are showing particiipants a 3 part video that describes how present and potential future of the domestic electricity market, after which the participants are asked to discuss, within a focus group, the issues raised in the videos that concern them most.</p>
-        </div>
-      </div>
-        <div class="content-about-us" align="center">
-            <h2>Figure energy</h2>
-            <p align="justify"> Motivated by the need to better manage energy demand in the home, in this work we advocate the integration into Ubicomp systems of interactive energy consumption visualisations, that allow users to engage with and understand their consumption data, relating it to concrete activities in their life. To this end, we present the design, implementation, and evaluation of FigureEnergy, a novel interactive visualisation that allows users to annotate and manipulate a graphical represenation of their own electricity consumption data, and therefore make sense of their past energy usage and understand when, how, and to what end, some amount of energy was used.<br>
-            To validate our design, we deployed FigureEnergy "in the wild" - 12 participants installed meters in their homes and used the system for a period of two weeks. The results detailed in the paper below indicate that the approach is overall successful: by engaging with the data users discover new information about it, even more than in their prior experience of using other electricity displays</p>
-            <h4>Associated papers</h4>
-            <p align="justify">Costanza, E., Ramchurn, S.D., & Jennings, N.R.(2012). Understanding domestic energy consumption through interactive visualisations: a field study. In 14th ACM Int.Conf. on Ubiquitous Computing</p>
-        </div>
+            <p align="justify">The CharIoT Energy Kit comprises an IoT sensor kit (wireless humidity, temperature, electricity and gas sensors and interactive apps) and, crucially, an effective use process to enable data collection and analysis to diagnose and mitigate fuel poverty issues such as damp, mould, cold homes, and unaffordable energy bills. The kit is designed to enable stakeholders (energy advisors, housing associations, councils, property owners etc.) to deploy and effectively use the Energy Kit at scale to make sense of and inform how to improve energy performance of homes.
+
+
+                The Chariot Energy Kit is the outcome of several EPSRC-funded research projects.
+                In the most recent Horizon Digital Economy Research-funded project (<a href="https://www.horizon.ac.uk/project/chariot-2-0/">https://www.horizon.ac.uk/project/chariot-2-0/</a>), the existing Chariot Energy Kit was improved from a research prototype to an (early stage) product. The project made the advances to make kit easier to configure and deploy by organisations, and provided new data analytics capabilities.
+                We have also been awarded EPSRC Impact Accelerator funds which were used to promote the Chariot Energy Kit to potential beneficiaries such as charities, housing associations, councils, and their clients (e.g., vulnerable tenants).
+                The Horizon project built on the earlier EPSRC CharIoT project, in which the Chariot Energy Kit was first developed for the Centre for Sustainable Energy (CSE). CSE is a charity that provides advice, especially to households in fuel poverty.
+        </div></div>
+
 
     </div>
   </main>
-
-  <!-- Modal -->
-  <div class="modal fade" id="videoModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-
-        <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jcDbR9YVY6k"  id="video"  allowscriptaccess="always">></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
-
   <!-- Footer -->
   <footer class="footer">
     <div class="container">
