--- a/publications.html
+++ b/publications.html
@@ -48,6 +48,9 @@
                <a class="nav-link navlist-custom" href="index.html">Home</a>
              </li>
              <li class="nav-item">
+              <a class="nav-link navlist-custom" href="background.html">Background</a>
+             </li>
+             <li class="nav-item">
                <a class="nav-link navlist-custom-active" href="#">Publications</a>
              </li>
              <li class="nav-item">
