--- a/team.html
+++ b/team.html
@@ -41,6 +41,9 @@
                  <a class="nav-link navlist-custom" href="index.html">Home</a>
                </li>
                <li class="nav-item">
+              <a class="nav-link navlist-custom" href="background.html">Background</a>
+            </li>
+               <li class="nav-item">
                  <a class="nav-link navlist-custom" href="publications.html">Publications</a>
                </li>
                <li class="nav-item">
@@ -169,7 +172,7 @@
       <a href="https://www.linkedin.com/in/malikobaid1"> <img class="img-fluid" src="img/linkedin-small.png" alt="LinkedIn"></a>
     </div>
     <div id= "arrow-horizontal" class="col-md-4 col-sm-6 col-sm-pull-6 ">
-    <img class="img-fluid" src="img/team-placeholder.png" alt="">
+    <img class="img-fluid" src="img/team-obaid-malik.png" alt="Obaid Malik">
     </div>
   </div>
 
