--- a/case-studies.html
+++ b/case-studies.html
@@ -79,18 +79,15 @@
           <img class="img-fluid" src="img/video-placeholder.png" alt="" data-toggle="modal" data-target="#videoModal">
         </div>
         <div class="col-md-6">
-            <h2>The future with energy-management agents </h2>
-            <p align="justify"> We are currently running a user study for agentSwitch in Nottingham. As part of this study, we are showing particiipants a 3 part video that describes how present and potential future of the domestic electricity market, after which the participants are asked to discuss, within a focus group, the issues raised in the videos that concern them most.</p>
+            <h2>Providing better energy advice with Chariot</h2>
+            <p align="justify"> The Centre for Sustainable Energy has made use of the Chariot Energy Kit to provide better energy advice to householders.</p>
+          <h4>Associated papers</h4>
+          <p align="justify">Fischer, Joel E., Andy Crabtree, James A. Colley, Tom Rodden, and Enrico Costanza. "Data work: how energy advisors and clients make IoT data accountable." Computer Supported Cooperative Work (CSCW) 26, no. 4-6 (2017): 597-626.</p>
+          <p align="justify">Joel Fischer, Andy Crabtree, Tom Rodden, James Colley, Enrico Constanza, Michael Jewell, Sarvapali Ramchurn, None None, "Just whack it on until it gets hot": Working with IoT Data in the Home, In Proceedings ACM CHI 2016.</p>
+          <p align="justify">Joel E.Fischer, Enrico Constanza, Sarvapali Ramchurn, James Colley, Tom Rodden, Energy advisors at work: charity work practices to support people in fuel poverty", In Proceedings ACM UbiComp '14'.</p>
+
         </div>
       </div>
-        <div class="content-about-us" align="center">
-            <h2>Figure energy</h2>
-            <p align="justify"> Motivated by the need to better manage energy demand in the home, in this work we advocate the integration into Ubicomp systems of interactive energy consumption visualisations, that allow users to engage with and understand their consumption data, relating it to concrete activities in their life. To this end, we present the design, implementation, and evaluation of FigureEnergy, a novel interactive visualisation that allows users to annotate and manipulate a graphical represenation of their own electricity consumption data, and therefore make sense of their past energy usage and understand when, how, and to what end, some amount of energy was used.<br>
-            To validate our design, we deployed FigureEnergy "in the wild" - 12 participants installed meters in their homes and used the system for a period of two weeks. The results detailed in the paper below indicate that the approach is overall successful: by engaging with the data users discover new information about it, even more than in their prior experience of using other electricity displays</p>
-            <h4>Associated papers</h4>
-            <p align="justify">Costanza, E., Ramchurn, S.D., & Jennings, N.R.(2012). Understanding domestic energy consumption through interactive visualisations: a field study. In 14th ACM Int.Conf. on Ubiquitous Computing</p>
-        </div>
-
     </div>
   </main>
 
