add new publication

--- a/publications.html
+++ b/publications.html
@@ -80,6 +80,32 @@
     <!-- Page Content -->
 
     <div class="container">
+       <div class="row publication">
+          <div class="col-md-8 offset-md-2 ">
+        <p>Fischer, Joel E., Andy Crabtree, James A. Colley, Tom Rodden, and Enrico Costanza. "Data work: how energy advisors and clients make IoT data accountable." Computer Supported Cooperative Work (CSCW) 26, no. 4-6 (2017): 597-626.</p>
+            <a role="button"      href="https://dl.acm.org/citation.cfm?id=3135673&CFID=817529150&CFTOKEN=44760928" class="btn btn-primary btn-dark button-custom-square button-hover" >Read more</a>
+            <button type="button" class="btn btn-secondary btn-light button-custom-square button-hover"  data-toggle="popover" data-content="@article{Fischer:2017:DWE:3135641.3135673,<br>
+ author = {Fischer, Joel E. and Crabtree, Andy and Colley, James A. and Rodden, Tom and Costanza, Enrico},<br>
+ title = {Data Work: How Energy Advisors and Clients Make IoT Data Accountable},<br>
+ journal = {Comput. Supported Coop. Work},<br>
+ issue_date = {December  2017},<br>
+ volume = {26},<br>
+ number = {4-6},<br>
+ month = dec,<br>
+ year = {2017},<br>
+ issn = {0925-9724},<br>
+ pages = {597--626},<br>
+ numpages = {30},<br>
+ url = {https://doi.org/10.1007/s10606-017-9293-x},<br>
+ doi = {10.1007/s10606-017-9293-x},<br>
+ acmid = {3135673},<br>
+ publisher = {Kluwer Academic Publishers},<br>
+ address = {Norwell, MA, USA},<br>
+ keywords = {CSCW, Collaborative work, Ethnomethodology, Internet of things},
+}
+">Bibtex</button>
+        </div>
+      </div>
       <div class="row publication">
           <div class="col-md-8 offset-md-2 ">
         <p>Enrico Costanza, Benjamin Bedwell, Michael Jewell, James Colley, Tom Rodden, 'A bit like British Weather, I suppose' Design and Evaluation of the Temperature Calendar, In Proceedings ACM CHI 2016</p>
