--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
             <div class="clearfix"></div>
             <h2 class="section-heading">About us </h2>
             <hr>
-            <p class="lead" align="justify">CharIoT is a web platform that aims to leverage the "Internet of Things" to support people in managing their energy use particularly those affected by fuel poverty.
-            The platform relies on a sensor kit to capture environmental data that is meaning in the context of fuel poverty (such as humidity and temperature), and explore ways in which to interrogate the data for the 'symptonms' of fule poverty, such as damp and cold.
-          Chariot is a collaboration between researchers at the University of Nottingham, the University of Southampton, and the Centre for Sustainable Energy. This project was funded bt the Engineering and Physical Sciences Research Council (EPSRC).</p>
+            <p class="lead" align="justify">CharIoT is a web platform that aims to leverage the "Internet of Things" to support people in managing their energy use particularly those affected by fuel poverty. The platform relies on a sensor kit to capture environmental data that is meaning in the context of fuel poverty (such as humidity and temperature), and explore ways in which to interrogate the data for the 'symptoms' of fuel poverty, such as damp and cold. Chariot is a collaboration between researchers at the University of Nottingham, the University of Southampton, and the Centre for Sustainable Energy. This project was funded by the Engineering and Physical Sciences Research Council (EPSRC).</p>
           </div>
           <div class="col-md-12 col-lg-5 mr-auto">
             <img class="img-fluid mx-auto" src="img/tablet.png" alt="">
